--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -465,4 +465,9 @@
       <Filter>TinyXML</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="resource\world\testWorld.xml">
+      <Filter>World Manager</Filter>
+    </Xml>
+  </ItemGroup>
 </Project>
