--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -234,6 +234,12 @@
     <ClCompile Include="source\DestroyEntityMessage.cpp">
       <Filter>Messages</Filter>
     </ClCompile>
+    <ClCompile Include="source\LoadSaveState.cpp">
+      <Filter>Game States</Filter>
+    </ClCompile>
+    <ClCompile Include="source\LoadingState.cpp">
+      <Filter>Game States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SGD Wrappers\SGD_AudioManager.h">
@@ -442,6 +448,12 @@
     </ClInclude>
     <ClInclude Include="source\DestroyEntityMessage.h">
       <Filter>Messages</Filter>
+    </ClInclude>
+    <ClInclude Include="source\LoadSaveState.h">
+      <Filter>Game States</Filter>
+    </ClInclude>
+    <ClInclude Include="source\LoadingState.h">
+      <Filter>Game States</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
