--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -27,9 +27,13 @@
     <ClCompile Include="source\BearTrap.cpp" />
     <ClCompile Include="source\BeaverZombie.cpp" />
     <ClCompile Include="source\BitmapFont.cpp" />
+    <ClCompile Include="source\CreateBeaverZombieMessage.cpp" />
+    <ClCompile Include="source\CreateFastZombieMessage.cpp" />
     <ClCompile Include="source\CreatePickupMessage.cpp" />
     <ClCompile Include="source\CreatePlaceableMessage.cpp" />
+    <ClCompile Include="source\CreatePlayerSpawnMessage.cpp" />
     <ClCompile Include="source\CreateProjectileMessage.cpp" />
+    <ClCompile Include="source\CreateSlowZombieMessage.cpp" />
     <ClCompile Include="source\CreditsState.cpp" />
     <ClCompile Include="source\Cursor.cpp" />
     <ClCompile Include="source\DestroyEntityMessage.cpp" />
@@ -68,6 +72,7 @@
     <ClCompile Include="source\Sprite.cpp" />
     <ClCompile Include="source\Tile.cpp" />
     <ClCompile Include="source\WallPickup.cpp" />
+    <ClCompile Include="source\WaveSystem.cpp" />
     <ClCompile Include="source\Weapon.cpp" />
     <ClCompile Include="source\WindowPickup.cpp" />
     <ClCompile Include="source\WinMain.cpp" />
@@ -101,9 +106,13 @@
     <ClInclude Include="source\BearTrap.h" />
     <ClInclude Include="source\BeaverZombie.h" />
     <ClInclude Include="source\BitmapFont.h" />
+    <ClInclude Include="source\CreateBeaverZombieMessage.h" />
+    <ClInclude Include="source\CreateFastZombieMessage.h" />
     <ClInclude Include="source\CreatePickupMessage.h" />
     <ClInclude Include="source\CreatePlaceableMessage.h" />
+    <ClInclude Include="source\CreatePlayerSpawnMessage.h" />
     <ClInclude Include="source\CreateProjectileMessage.h" />
+    <ClInclude Include="source\CreateSlowZombieMessage.h" />
     <ClInclude Include="source\CreditsState.h" />
     <ClInclude Include="source\Cursor.h" />
     <ClInclude Include="source\DestroyEntityMessage.h" />
@@ -145,6 +154,7 @@
     <ClInclude Include="source\Sprite.h" />
     <ClInclude Include="source\Tile.h" />
     <ClInclude Include="source\WallPickup.h" />
+    <ClInclude Include="source\WaveSystem.h" />
     <ClInclude Include="source\Weapon.h" />
     <ClInclude Include="source\WindowPickup.h" />
     <ClInclude Include="source\WorldManager.h" />
@@ -152,7 +162,10 @@
     <ClInclude Include="TinyXML\tinyxml.h" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="resource\world\testWorld.xml" />
+    <Xml Include="resource\world\bigWorld.xml" />
+    <Xml Include="resource\world\testWorld.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <None Include="resource\data\BitmapFont_Roboto.fnt" />
