Made a AnimationID.h class in order to make the AnimationManager Update and Render work as it needs to.

--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="SGD Wrappers\SGD_String.h" />
     <ClInclude Include="source\AIComponent.h" />
     <ClInclude Include="source\AmmoPickup.h" />
+    <ClInclude Include="source\AnimationID.h" />
     <ClInclude Include="source\AnimationManager.h" />
     <ClInclude Include="source\AssaultRifleBullet.h" />
     <ClInclude Include="source\BearTrap.h" />
