Commented some code in Player.cpp

--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -513,7 +513,7 @@
       <Filter>Zombie Factory</Filter>
     </ClInclude>
     <ClInclude Include="source\AnimationID.h">
-      <Filter>Header Files</Filter>
+      <Filter>Animation Manager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
