Added Pause Menu background, functionality with keys and xbox 360 controller Added Options saving/loading to config.xml Added Pause Menu tabs (Main Pause Menu, and Options Paused Menu) GameplayState loads in the volume from the config.xml Added Toggling fullscreen with Alt+Enter Fixed BitmapFont warnings

--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -526,6 +526,9 @@
     <Xml Include="resource\data\wave.xml">
       <Filter>Zombie Factory</Filter>
     </Xml>
+    <Xml Include="resource\data\config.xml">
+      <Filter>Game States</Filter>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <None Include="resource\data\BitmapFont_Roboto.fnt">
