Fixed pathfinding, fixed wave system, optimized world rendering, removed ugly debug stuff on the entities, added DrawTextureSectionSimple (no rotation or scaling for optimization) to SGD_GraphicsManager, fixed Doug's SendMessageNow, added support for defining player spawn position, create CheckCollision function inside EntityManager that checks a rect against 1 or more buckets, did a whole bunch of other stuff, and some more other stuff. This push just got real.

--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -535,6 +535,9 @@
     <Xml Include="resource\data\config.xml">
       <Filter>Game States</Filter>
     </Xml>
+    <Xml Include="resource\data\singleEnemy.xml">
+      <Filter>Zombie Factory</Filter>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <None Include="resource\data\BitmapFont_Roboto.fnt">
