--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -168,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="resource\data\config.xml" />
+    <Xml Include="resource\data\singleEnemy.xml" />
     <Xml Include="resource\data\wave.xml" />
     <Xml Include="resource\world\bigWorld.xml" />
     <Xml Include="resource\world\testWorld.xml">
