--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -279,7 +279,7 @@
     <ClCompile Include="source\Camera.cpp">
       <Filter>Camera</Filter>
     </ClCompile>
-    <ClCompile Include="CreateParticleMessage.cpp">
+    <ClCompile Include="source\CreateParticleMessage.cpp">
       <Filter>Messages</Filter>
     </ClCompile>
   </ItemGroup>
@@ -524,7 +524,7 @@
     <ClInclude Include="Camera.h">
       <Filter>Camera</Filter>
     </ClInclude>
-    <ClInclude Include="CreateParticleMessage.h">
+    <ClInclude Include="source\CreateParticleMessage.h">
       <Filter>Messages</Filter>
     </ClInclude>
   </ItemGroup>
