--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="source\CreatePlayerSpawnMessage.cpp" />
     <ClCompile Include="source\CreateProjectileMessage.cpp" />
     <ClCompile Include="source\CreateSlowZombieMessage.cpp" />
+    <ClCompile Include="source\CreateTowerMessage.cpp" />
     <ClCompile Include="source\CreditsState.cpp" />
     <ClCompile Include="source\Cursor.cpp" />
     <ClCompile Include="source\DestroyEntityMessage.cpp" />
@@ -51,12 +52,16 @@
     <ClCompile Include="source\GameplayState.cpp" />
     <ClCompile Include="source\Grenade.cpp" />
     <ClCompile Include="source\HealthPackPickup.cpp" />
+    <ClCompile Include="source\HockeyStickTower.cpp" />
     <ClCompile Include="source\IntroState.cpp" />
     <ClCompile Include="source\Inventory.cpp" />
+    <ClCompile Include="source\LaserTower.cpp" />
     <ClCompile Include="source\Layer.cpp" />
     <ClCompile Include="source\LoadingState.cpp" />
     <ClCompile Include="source\LoadSaveState.cpp" />
+    <ClCompile Include="source\MachineGunTower.cpp" />
     <ClCompile Include="source\MainMenuState.cpp" />
+    <ClCompile Include="source\MapleSyrupTower.cpp" />
     <ClCompile Include="source\MenuFlyweight.cpp" />
     <ClCompile Include="source\Mine.cpp" />
     <ClCompile Include="source\OptionsState.cpp" />
@@ -74,6 +79,7 @@
     <ClCompile Include="source\SpeedPickup.cpp" />
     <ClCompile Include="source\Sprite.cpp" />
     <ClCompile Include="source\Tile.cpp" />
+    <ClCompile Include="source\Tower.cpp" />
     <ClCompile Include="source\WallPickup.cpp" />
     <ClCompile Include="source\ZombieFactory.cpp" />
     <ClCompile Include="source\Weapon.cpp" />
@@ -119,6 +125,7 @@
     <ClInclude Include="source\CreatePlayerSpawnMessage.h" />
     <ClInclude Include="source\CreateProjectileMessage.h" />
     <ClInclude Include="source\CreateSlowZombieMessage.h" />
+    <ClInclude Include="source\CreateTowerMessage.h" />
     <ClInclude Include="source\CreditsState.h" />
     <ClInclude Include="source\Cursor.h" />
     <ClInclude Include="source\DestroyEntityMessage.h" />
@@ -133,14 +140,18 @@
     <ClInclude Include="source\GameplayState.h" />
     <ClInclude Include="source\Grenade.h" />
     <ClInclude Include="source\HealthPackPickup.h" />
+    <ClInclude Include="source\HockeyStickTower.h" />
     <ClInclude Include="source\IEntity.h" />
     <ClInclude Include="source\IGameState.h" />
     <ClInclude Include="source\IntroState.h" />
     <ClInclude Include="source\Inventory.h" />
+    <ClInclude Include="source\LaserTower.h" />
     <ClInclude Include="source\Layer.h" />
     <ClInclude Include="source\LoadingState.h" />
     <ClInclude Include="source\LoadSaveState.h" />
+    <ClInclude Include="source\MachineGunTower.h" />
     <ClInclude Include="source\MainMenuState.h" />
+    <ClInclude Include="source\MapleSyrupTower.h" />
     <ClInclude Include="source\MenuFlyweight.h" />
     <ClInclude Include="source\MessageID.h" />
     <ClInclude Include="source\Mine.h" />
@@ -159,6 +170,7 @@
     <ClInclude Include="source\SpeedPickup.h" />
     <ClInclude Include="source\Sprite.h" />
     <ClInclude Include="source\Tile.h" />
+    <ClInclude Include="source\Tower.h" />
     <ClInclude Include="source\WallPickup.h" />
     <ClInclude Include="source\WaveData.h" />
     <ClInclude Include="source\ZombieFactory.h" />
