Towers, health bars, velocities, oh my!

--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\CreateBeaverZombieMessage.cpp" />
     <ClCompile Include="source\CreateFastZombieMessage.cpp" />
+    <ClCompile Include="source\CreateMachineGunBulletMessage.cpp" />
     <ClCompile Include="source\CreateParticleMessage.cpp" />
     <ClCompile Include="source\CreatePickupMessage.cpp" />
     <ClCompile Include="source\CreatePlaceableMessage.cpp" />
@@ -59,6 +60,7 @@
     <ClCompile Include="source\Layer.cpp" />
     <ClCompile Include="source\LoadingState.cpp" />
     <ClCompile Include="source\LoadSaveState.cpp" />
+    <ClCompile Include="source\MachineGunBullet.cpp" />
     <ClCompile Include="source\MachineGunTower.cpp" />
     <ClCompile Include="source\MainMenuState.cpp" />
     <ClCompile Include="source\MapleSyrupTower.cpp" />
@@ -119,6 +121,7 @@
     <ClInclude Include="source\Button.h" />
     <ClInclude Include="source\CreateBeaverZombieMessage.h" />
     <ClInclude Include="source\CreateFastZombieMessage.h" />
+    <ClInclude Include="source\CreateMachineGunBulletMessage.h" />
     <ClInclude Include="source\CreateParticleMessage.h" />
     <ClInclude Include="source\CreatePickupMessage.h" />
     <ClInclude Include="source\CreatePlaceableMessage.h" />
@@ -149,6 +152,7 @@
     <ClInclude Include="source\Layer.h" />
     <ClInclude Include="source\LoadingState.h" />
     <ClInclude Include="source\LoadSaveState.h" />
+    <ClInclude Include="source\MachineGunBullet.h" />
     <ClInclude Include="source\MachineGunTower.h" />
     <ClInclude Include="source\MainMenuState.h" />
     <ClInclude Include="source\MapleSyrupTower.h" />
