--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -303,6 +303,12 @@
     <ClCompile Include="source\LaserTower.cpp">
       <Filter>Towers/Traps</Filter>
     </ClCompile>
+    <ClCompile Include="source\CreateMachineGunBulletMessage.cpp">
+      <Filter>Towers/Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="source\MachineGunBullet.cpp">
+      <Filter>Towers/Traps</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SGD Wrappers\SGD_AudioManager.h">
@@ -564,6 +570,12 @@
       <Filter>Towers/Traps</Filter>
     </ClInclude>
     <ClInclude Include="source\LaserTower.h">
+      <Filter>Towers/Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="source\CreateMachineGunBulletMessage.h">
+      <Filter>Towers/Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="source\MachineGunBullet.h">
       <Filter>Towers/Traps</Filter>
     </ClInclude>
   </ItemGroup>
