--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -336,6 +336,12 @@
     <ClCompile Include="source\WaveCompleteMessage.cpp">
       <Filter>Messages</Filter>
     </ClCompile>
+    <ClCompile Include="source\MapleSyrupBullet.cpp">
+      <Filter>Towers/Traps</Filter>
+    </ClCompile>
+    <ClCompile Include="source\CreateMapleSyrupBulletMessage.cpp">
+      <Filter>Towers/Traps</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SGD Wrappers\SGD_AudioManager.h">
@@ -628,6 +634,12 @@
     </ClInclude>
     <ClInclude Include="source\WaveCompleteMessage.h">
       <Filter>Messages</Filter>
+    </ClInclude>
+    <ClInclude Include="source\MapleSyrupBullet.h">
+      <Filter>Towers/Traps</Filter>
+    </ClInclude>
+    <ClInclude Include="source\CreateMapleSyrupBulletMessage.h">
+      <Filter>Towers/Traps</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
